# stamp_estimation_script

./: .gitignore  Dockerfile  README.md  config.dev.ini  config.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.py  setup.py
script/: driver.py  errors.py  executor.py  logger.py  run.py  server.py  utils.py
script/contracts/: genesis.json  install.py  submission.s.py
script/contracts/genesis/: elect_members.s.py  election_house.s.py  foundation.s.py  members.s.py  rewards.s.py  stamp_cost.s.py  upgrade.s.py
tests/: test_script.py
